package sistemamatriculas;

import java.util.List;

public class Curso {

    private String nome;
    private int numeroCreditos;
    private List<Disciplina> disciplinas;

    public Curso(String nome, int numeroCreditos) {
        throw new UnsupportedOperationException("não implementado");
    }

    public void adicionarDisciplina(Disciplina disciplina) {
        throw new UnsupportedOperationException("não implementado");
    }

    public String getNome() {
        throw new UnsupportedOperationException("não implementado");
    }

    public int getNumeroCreditos() {
        throw new UnsupportedOperationException("não implementado");
    }

    public List<Disciplina> getDisciplinas() {
        throw new UnsupportedOperationException("não implementado");
    }
}
