package sistemamatriculas;

public class SistemaCobranca {

    public void notificarNovaMatricula(Matricula matricula) {
        throw new UnsupportedOperationException("não implementado");
    }
}
