package sistemamatriculas;

public enum StatusDisciplina {
    EM_PERIODO_MATRICULA,
    ATIVA,
    CANCELADA
}
