package sistemamatriculas;

public enum StatusMatricula {
    ATIVA,
    CANCELADA
}
