package sistemamatriculas;

public enum TipoMatricula {
    OBRIGATORIA,
    OPTATIVA
}
