package sistemamatriculas;

import java.util.List;

public class Universidade {

    private List<Aluno> alunos;
    private List<Professor> professores;
    private List<Secretaria> secretarias;
    private List<Curso> cursos;
    private List<Disciplina> disciplinas;
    private List<Curriculo> curriculos;

    public Universidade() {
        throw new UnsupportedOperationException("não implementado");
    }

    public List<Aluno> getAlunos() {
        throw new UnsupportedOperationException("não implementado");
    }

    public List<Professor> getProfessores() {
        throw new UnsupportedOperationException("não implementado");
    }

    public List<Curso> getCursos() {
        throw new UnsupportedOperationException("não implementado");
    }

    public List<Disciplina> getDisciplinas() {
        throw new UnsupportedOperationException("não implementado");
    }

    public List<Curriculo> getCurriculos() {
        throw new UnsupportedOperationException("não implementado");
    }
}
